# koollector

./: pyproject.toml
src/koolector/: config.py  convert.py  main.py
src/koollector/cli/: common.py  convert.py  process.py
src/koollector/core/: pipeline.py  settings.py  utils.py
src/koollector/core/services/: converter.py
